--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -8,11 +8,11 @@ html, body {
 }
 
 body {
-	font-family: "San Francisco", "Helvetica Neue", "Helvetica", "Arial";
+	font-family: "Helvetica", "Helvetica", "Helvetica", "Helvetica";
 }
 
 a {
-	color: #00a4ca;
+	color: #F7C4B8;
 	text-decoration: none;
 }
 
@@ -30,7 +30,7 @@ h1 strong, h2 strong {
 
 h1 {
 	font-weight: 300;
-	font-size: 2.3em;
+	font-size: 2.5em;
 	margin: 0;
 }
 
