--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -1,6 +1,30 @@
+.highlight-section {
+	background: #2323AC;
+	color: #ffffff;
+	text-align: center;
+	margin: 0;
+	padding: 100px 0;
+
+	h2 {
+		margin-bottom: 50px;
+	}
+}
+
+.text-section {
+	background: #f5f5f5;
+	color: #2b2b2b;
+	text-align: left;
+	margin: 0;
+	padding: 100px 0;
+
+	h2 {
+		margin-bottom: 50px;
+	}
+}
+
 .bottom-cta {
 	background: linear-gradient(to bottom, $brand-color 0%, $middle-gradient-color 100%);
-	color: #fff;
+	color: #F7C4B8;
 	text-align: center;
 	margin: 0;
 	padding: 100px 0;
@@ -32,8 +56,8 @@
 }
 
 .hero {
-	color: #ffffff;
-	text-align: center;
+	color: #2b2b2b;
+	text-align: left;
 	background: linear-gradient(to bottom, $middle-gradient-color 0%, $secondary-brand-color 100%) no-repeat #a05fb7;
 	padding-top: 50px;
 
