--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,5 @@
-$brand-color: #4182e4;
-$secondary-brand-color: #4182e4;
+$brand-color: #eeeeff;
+$secondary-brand-color: #ccccccff;
 $middle-gradient-color: mix($brand-color, $secondary-brand-color, 95%);
 
 // Breakpoints
