updating MVP and removing irrelevant template stuff

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
 					</ul>
 					{% endfor %}
 				</div>
-				<p class="copyright"> 2020 Solidity Team • <a href="https://github.com/ethereum/solidity/blob/develop/CODE_OF_CONDUCT.md">Code of Conduct</a> &amp; <a href="#">Legal Imprint</a> • <a href="https://cloudcannon.com/">Template by CloudCannon</a></p>
+				<p class="copyright"> 2020 Solidity Team • <a href="https://github.com/ethereum/solidity/blob/develop/CODE_OF_CONDUCT.md">Code of Conduct</a> &amp; <a href="/imprint/">Legal Imprint</a> • <a href="https://cloudcannon.com/">Template by CloudCannon</a></p>
 			</div>
 		</footer>
 		<script>
