--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -8,11 +8,11 @@ html, body {
 }
 
 body {
-	font-family: "Helvetica", "Helvetica", "Helvetica", "Helvetica";
+	font-family: "San Francisco", "Helvetica Neue", "Helvetica", "Arial";
 }
 
 a {
-	color: #F7C4B8;
+	color: #F0978B;
 	text-decoration: none;
 }
 
@@ -25,27 +25,34 @@ img {
 }
 
 h1 strong, h2 strong {
+	font-family: "Trebuchet MS";
 	font-weight: 700;
 }
 
 h1 {
-	font-weight: 300;
-	font-size: 2.5em;
+	font-family: "Trebuchet MS";
+	font-weight: 500;
+	font-size: 2.9em;
 	margin: 0;
 }
 
 h2 {
+	font-family: "Helvetica";
 	font-weight: 300;
-	font-size: 2.2em;
+	font-size: 2.0em;
 	margin: 0 0 30px 0;
 }
 
 h3 {
+	font-family: "Helvetica";
+	font-weight: 300;
+	font-size: 1.5em;
 	margin: 20px 0 10px 0;
 }
 
 
 p, address {
+	font-family: "Helvetica";
 	font-size: 1.38em;
 	color: #666;
 	margin-bottom: 20px;
