--- a/_sass/forms.scss
+++ b/_sass/forms.scss
@@ -1,5 +1,5 @@
 .button a, input[type=submit] {
-	color: #fff;
+	color: #ffffff;
 	text-decoration: none;
 	padding: 10px 30px;
 	background: $brand-color;
@@ -15,14 +15,14 @@
 }
 
 .button.alt a {
-	background: rgba(255,255,255,0.15);
+	background: #F0978B;
 	border-radius: 3px;
 	border: 1px solid rgba(255, 255, 255, 0.3);
 	padding: 16px 50px;
 }
 
 .button.alt a:hover {
-	background: #fff;
+	background: #002fa7;
 	color: $brand-color;
 }
 
