--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,5 @@
-$brand-color: #eeeeff;
-$secondary-brand-color: #ccccccff;
+$brand-color: #f3f3f3;
+$secondary-brand-color: #CCCCCC;
 $middle-gradient-color: mix($brand-color, $secondary-brand-color, 95%);
 
 // Breakpoints
