--- a/_sass/forms.scss
+++ b/_sass/forms.scss
@@ -1,29 +1,28 @@
 .button a, input[type=submit] {
-	color: #ffffff;
-	text-decoration: none;
+	color: #000000;
+	text-decoration: underline;
 	padding: 10px 30px;
 	background: $brand-color;
-	border-radius: 3px;
-	border: 1px solid rgba(255,255,255,.5);
+	border-radius: 2px;
 	transition: .2s ease-in-out;
 }
 
 .button a:hover, input[type=submit]:hover {
-	border: 1px solid #fff;
+	border: 1px solid #D9EA1C;
 	background: $secondary-brand-color;
 	cursor: pointer;
 }
 
 .button.alt a {
-	background: #F0978B;
+	background: #D9EA1C;
 	border-radius: 3px;
 	border: 1px solid rgba(255, 255, 255, 0.3);
 	padding: 16px 50px;
 }
 
 .button.alt a:hover {
-	background: #002fa7;
-	color: $brand-color;
+	background: #111111;
+	color: #D9EA1C;
 }
 
 textarea, input, button, select { font-family: inherit; font-size: inherit; }
