--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,4 +1,4 @@
-$brand-color: #f3f3f3;
+$brand-color: #E5E5E5;
 $secondary-brand-color: #CCCCCC;
 $middle-gradient-color: mix($brand-color, $secondary-brand-color, 95%);
 
