--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1,5 +1,5 @@
 .content {
-	background: #fff;
+	background: #ffffff;
 	padding: 1px 0 0 0;
 	position: relative;
 }
@@ -32,8 +32,7 @@
 header {
 	color: #fff;
 	padding: 20px 0;
-	background: $brand-color; /* Old browsers */
-	background: linear-gradient(to bottom, $brand-color 0%, $middle-gradient-color 100%) no-repeat $brand-color;
+	background: $brand-color;
 
 	a {
 		color: #fff;
@@ -95,10 +94,6 @@ header {
 	position: relative;
 }
 
-
-
-
-
 section {
 	padding: 100px 0;
 }
@@ -117,57 +112,6 @@ section + section {
 	margin: 60px 0;
 }
 
-.page h2 {
-	text-align: center;
-}
-
-blockquote {
-	padding: 18px 25px;
-	margin: 0;
-	quotes: "\201C""\201D""\2018""\2019";
-	font-style: italic;
-
-	.author {
-		display: block;
-		font-weight: bold;
-		margin: 10px 0 0 0;
-		font-size: .85em;
-		font-style: normal;
-	}
-
-	p {
-		display: inline;
-	}
-}
-
-blockquote:before {
-	color: #ccc;
-	content: open-quote;
-	font-size: 4em;
-	line-height: 0.1em;
-	margin-right: 0.25em;
-	vertical-align: -0.4em;
-}
-
-.square-image {
-	width: 150px;
-	height: 150px;
-	overflow: hidden;
-	margin: 25px auto 0 auto;
-	position: relative;
-	border-radius: 200px;
-
-	img {
-		position: absolute;
-		left: -1000%;
-		right: -1000%;
-		top: -1000%;
-		bottom: -1000%;
-		margin: auto;
-		width: 300px;
-	}
-}
-
 .page {
 	margin-bottom: 0;
 	padding-bottom: 80px;
@@ -175,31 +119,4 @@ blockquote:before {
 
 .center-text {
 	text-align: center;
-}
-
-.editor-link {
- 	display: none;
-	margin-top: 0;
-	.btn {
-		border: 0;
-		border-radius: 2px;
-		width: 100%;
-		max-width: 500px;
-		box-sizing: border-box;
-		font-size: 2rem;
-		text-decoration: none;
-		padding: 10px 15px;
-		margin: 0;
-		font-size: 18px;
-		cursor: pointer;
-		background-color: #f7e064;
-		color: #333;
-		box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.2);
-
-		&:hover {
-			background-color: #f4d525;
-			color: #333;
-		}
-	}
-
 }
