--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -16,9 +16,9 @@
 }
 
 nav {
-	text-transform: uppercase;
+	text-transform: lowercase;
 	font-size: .8em;
-	font-weight: 500;
+	font-weight: 400;
 	width: 100%;
 
 	@media #{$mid-point} {
