--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,6 +1,5 @@
 $brand-color: #E5E5E5;
-$secondary-brand-color: #CCCCCC;
-$middle-gradient-color: mix($brand-color, $secondary-brand-color, 95%);
+$secondary-brand-color: #C4C4C4;
 
 // Breakpoints
 $tablet: "(min-width: 450px)";
