--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
 				</div>
 				<p class="copyright">CMidas &copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
 				<br>
-				<p class="copyright">Anticipating future events can cause unintended consequences in the present, which in consequence leads to invalidation of preceding forecasts.</p>
+				<p class="copyright">Anticipation of future events can cause unintended consequences in the present. Proceed with caution.</p>
 			</div>
 		</footer>
 		<script>
