--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,12 +5,18 @@ layout: default
 	<section class="page">
 		<div class="container {% if page.full_width %}max-container{% endif %}">
 			{% if page.heading %}
-				<h2>{{ page.heading }}</h2>
+				<h2 class="cms-editor-link" 
+		        data-cms-editor-link-style="modal" 
+		        data-cms-editor-link="cloudcannon:#heading">{{ page.heading }}</h2>
 			{% elsif page.title and page.layout != 'archive' %}
-				<h2>{{ page.title }}</h2>
+				<h2 class="cms-editor-link" 
+		        data-cms-editor-link-style="modal" 
+		        data-cms-editor-link="cloudcannon:#title">{{ page.title }}</h2>
 			{% endif %}
 			{% if page.description %}
-				<p class="subtext">{{ page.description }}</p>
+				<p class="subtext cms-editor-link" 
+		       data-cms-editor-link-style="modal" 
+		       data-cms-editor-link="cloudcannon:#description">{{ page.description }}</p>
 			{% endif %}
 			{{ content }}
 		</div>
