--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -20,8 +20,8 @@
 header {
 	color: #fff;
 	padding: 20px 0;
-	background: $brand-color; /* Old browsers */
 	/* remove the brand/primary color from the header bar to make the white letters more legible
+	background: $brand-color; /* Old browsers
 	background: linear-gradient(to right, $brand-color 0%, $middle-gradient-color 100%) no-repeat $brand-color;
 	*/
 
