Temporarily use text as brand name

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 	<body>
 		<header>
 			<div class="container">
-				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo.svg" alt="Mappit Logo" width="95" height="33" /></a></div>
+				<div class="company-name temp-company-name"><a href="{{ site.baseurl }}/">mappit</a></div>
 				{% include navigation.html %}
 			</div>
 		</header>
