--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -47,6 +47,13 @@ header {
 			width: auto;
 		}
 	}
+
+	.temp-company-name {
+		position: absolute;
+		top: 1em;
+		letter-spacing: 2px;
+		font-size: 1.2em;
+	}
 }
 
 .content {
