--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -33,7 +33,7 @@ nav {
 		margin: 0 3px;
 		padding: 20px 10px;
 		border-bottom: 1px solid rgba(255,255,255,0);
-		color: rgba(255,255,255,.8);
+		color: $blue-color;
 		transition: .2s ease-in-out;
 		display: none;
 
@@ -64,13 +64,15 @@ nav {
 	a:hover {
 
 		border-bottom: 1px solid rgba(255,255,255,.3);
-		color: #fff;
+		color: $blue-color;
 	}
 
 	@media #{$mid-point} {
 		a.highlight {
 			border: 1px #ccc solid;
 			border-radius: 5px;
+			background-color: $dark-blue-color;
+			color: #fff;
 
 			&:hover {
 				background: #fff;
