--- a/_sass/forms.scss
+++ b/_sass/forms.scss
@@ -15,7 +15,7 @@
 }
 
 .button.alt a {
-	background: rgba(255,255,255,0.15);
+	background: $dark-blue-color;
 	border-radius: 3px;
 	border: 1px solid rgba(255, 255, 255, 0.3);
 	padding: 16px 50px;
