--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -1,6 +1,6 @@
 .bottom-cta {
-	background: linear-gradient(to bottom, $brand-color 0%, $middle-gradient-color 100%);
-	color: #fff;
+	background: $blue-color;
+	color: $dark-blue-color;
 	text-align: center;
 	margin: 0;
 	padding: 100px 0;
@@ -32,13 +32,13 @@
 }
 
 .hero {
-	color: #ffffff;
+	color: $blue-color;
 	text-align: center;
 	background: linear-gradient(to bottom, $middle-gradient-color 0%, $secondary-brand-color 100%) no-repeat #a05fb7;
 	padding-top: 50px;
 
 	p {
-		color: #fff;
+		color: $blue-color;
 	}
 }
 
