--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -90,6 +90,8 @@ section + section {
 .cta.button.alt a {
 	background-color: rgba(0, 0, 0, 0.5);
 	font-size: 1.2em;
+	display: block;
+    width: fit-content;
 }
 
 
